<resources>
    <string name="app_name">NewsHour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title">Headline</string>
    <string name="time">Sat, Aug 10, \'18</string>
    <string name="name">Name</string>

    <string name="news_name">Twinny News</string>
    <string name="image_view_desc">Image Thumbnail</string>

    <string name="no_news_found">No News Found</string>
    <string name="no_internet_connection">Sorry, No Internet Connection.</string>


    <!--News Categories-->
    <string name="home">Home</string>
    <string name="world">World</string>
    <string name="business">Business</string>
    <string name="fashion">Fashion</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>


</resources>

