<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/world"
            android:title="@string/world" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/business"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/science"
            android:title="@string/science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/sports"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_fashion"
            android:icon="@drawable/fashion"
            android:title="@string/fashion" />
    </group>


</menu>
